White space fixes

--- a/css/main.scss
+++ b/css/main.scss
@@ -207,7 +207,7 @@ section{
 
 @media only screen and (min-width: 1050px){
     .hero{
-        height: 90vh;
+        height: 60vh;
     }
     .parent{
         display: block;
@@ -325,7 +325,11 @@ section{
         padding: 6em 8em 6em 10em;
     }
 }
-
+@media only screen and (min-width: 1450px){
+    .hero{
+        height: 70vh;
+    }
+}
 @media only screen and (min-width: 1550px){
     header{
         padding: 2.5em 2em 2em 20em;
@@ -339,6 +343,11 @@ section{
 
     .hero .content{
         padding: 9em 20em 6em 20em;
+    }
+}
+@media only screen and (min-width: 1650px){
+    .hero{
+        height: 80vh;
     }
 }
 
